--- a/inst/rmarkdown/templates/pepr-roa/skeleton/rm_strain_selection_info.Rmd
+++ b/inst/rmarkdown/templates/pepr-roa/skeleton/rm_strain_selection_info.Rmd
@@ -1,5 +1,5 @@
 <!-- 
-Text specific to RM: inforamtion about strain selection and publically available reference genome seq for that strain.
+Text specific to RM: information about strain selection and publically available reference genome seq for that strain.
 --> 
 ___SPECIFIC TO RM__ strain selection info
 
