--- a/inst/rmarkdown/templates/pepr-roa/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/pepr-roa/skeleton/skeleton.Rmd
@@ -1,13 +1,14 @@
 ---
-title: "NIST Micro RM ROA Template"
+title: "Draft ROA Micro RM Template"
 author: "Nathan D. Olson"
-date: "March 20, 2015"
+date: "June 5, 2015"
 output:
   html_document: default
   pdf_document:
     latex_engine: xelatex
     toc: yes
   toc: yes
+  word_document: default
 bibliography: micro_rm_references.bib
 ---
 ```{r, echo = FALSE, message = FALSE}
@@ -16,6 +17,7 @@ source("rm_metadata.R")
 
 ```{r, echo = FALSE, message=FALSE}
 library(png)
+library(jpeg)
 library(grid)
 library(peprr)
 library(dplyr)
@@ -36,21 +38,16 @@ Increasingly, high stakes decisions impacting public health and safety are being
 ```
 
 
-Loftstrand Labs[^lofstrand] Limited grew a large batch of `r rm_strain` provided by `r strain_source`  to produce ~ `r (rm_vial_number * 3)/1000` mg of total extracted DNA, divided equally into `r rm_vial_number` vials (Appendix: [Section A][], [Section B][]). Each unit of `r rm_number` is approximately `r rm_mass` ug of extracted genomic DNA in Tris buffer.  The material is stored in 0.5 ml screw cap microcentrifuge tubes (Item number 1405-9710 USA Scientific [^usa]).
+Loftstrand Labs Limited[^lofstrand] grew a large batch of `r rm_strain` provided by `r strain_source`  to produce ~ `r (rm_vial_number * 3)/1000` mg of total extracted DNA, divided equally into `r rm_vial_number` vials (See appendix for RM label and manufacturer provided report of analysis). Each unit of `r rm_number` is approximately `r rm_mass` ug of extracted genomic DNA in Tris buffer.  The material is stored in 0.5 mL screw cap microcentrifuge tubes (Item number 1405-9710 USA Scientific [^usa]).
 
 ```{r echo = FALSE,child='rm_specific_culture_ext.Rmd' }
 ## Add text specific to rm regarding culturing conditions and DNA extraction.
 ```
  
-This RM is isolated DNA rather than live cells because cells can mutate with each cell division, and the genome sequence may not be stable over time for live cells. Extracting DNA from a large batch of cells helps ensure that all vials contain essentially the same DNA sequences. Even though the DNA in the cells is likely to mutate at low frequency during the growth, the resulting mutations will be in extremely small proportions of the overall cells unless they confer a selective advantage and occur early in the culture process. Even if any mutations confer a selective advantage, the DNA from the large batch of cells was mixed before aliquoting to minimize the variability in the proportions of mutations among vials. 
+This RM is isolated DNA rather than live cells because cells can mutate with each cell division, and the genome sequence may not be stable over time for live cells. Extracting DNA from a large batch of cells helps ensure that all vials contain essentially the same DNA sequences. Even though the DNA in the cells is likely to mutate at low frequency during the growth, the resulting mutations will be in extremely small proportions of the overall cells unless they confer a selective advantage and occur early in the culture process. Potential high frequency mutations will be identified as part of the material characterization process. Even if any mutations confer a selective advantage, the DNA from the large batch of cells was mixed before aliquoting to minimize the variability in the proportions of mutations among vials.
  
 ## Intended Use
-The intended use of `r rm_number` is to help assess performance of high-throughput DNA sequencing.  There are two primary intended use cases for the RM:  
-
-1. DNA sequencing and data analysis method validation and quality control as part of a laboratory quality control program;     
-2. microbial genome sequencing for DNA sequencing including genome assembly, read mapping based variant calling methods.   
-
-The genomic DNA is intended to be analyzed in the same way as any other sample a laboratory would analyze extracted DNA, such as through the use of a genome assembly or variant calling bioinformatic pipeline (Fig. 1).  Because the RM is extracted DNA, it does not assess pre-analytical steps such as DNA extraction. It does however, challenge sequencing library preparation, sequencing machines, base calling algorithms, and the subsequent bioinformatic analysis.  This RM is not intended to assess bioinformatics steps such as strain identificaiton, phylogenetic analysis, or genome annotation. It is important to recognize the genome sequence is provided as an “Information Value” rather than “Certified Value” because we were not yet fully confident that we accounted for all known biases.  However, we evaluated the individual base calls and genome assembly for a number of known sources of bias, e.g. repeat regions, and included additional information regarding these sources of bias (see vcf and gff files). 
+The intended use of `r rm_number` is to help assess performance of high-throughput DNA sequencing.  The primary intended use case for the RM is DNA sequencing method validation and quality control.  The genomic DNA is intended to be analyzed in the same way as any other sample a laboratory would analyze extracted DNA, such as through the use of a genome assembly or variant calling bioinformatic pipeline (Fig. 1).  Because the RM is extracted DNA, it does not assess pre-analytical steps such as DNA extraction. It does however, challenge sequencing library preparation, sequencing machines, base calling algorithms, and the subsequent bioinformatic analysis.  This RM is not intended to assess bioinformatics steps such as strain identificaiton, phylogenetic analysis, or genome annotation. It is important to recognize the genome sequence is provided as an “Information Value” rather than “Certified Value” because we were not yet fully confident that we accounted for all known biases.  However, we evaluated the material using a number of orthogonal methods to minimize the impact of systematic errors associated with individual platforms. 
 
 ```{r echo = FALSE, fig.width = 6, fig.align='center', fig.cap= "Generic measurement process for genome assembly and variant calling intended use cases.  For sequencing quality control the results from the sequencing step would be compared to the reference material genome sequence to determine base level sequencing accuracy."}
 grid.raster(readPNG("measurement_process.png"))
@@ -60,7 +57,7 @@ grid.raster(readPNG("measurement_process.png"))
 ## Genome Sequence as a reference value
 Characterizing a microbial genome RM at each of the $`r rm_genome_size/1000000`\times 10^6$ positions poses a significant metrological challenge. The consensus base call at each genomic position is a “nominal property”, because it is not a numerical value.  A previous sequence-based SRM 2374 was certified primarily based on capillary (or “Sanger”) sequencing, a relatively mature sequencing technology that is not easily scalable to whole genomes.  The maturity of capillary sequencing as well as the small size of SRM 2374 (< 100,000 bases) allowed for manual curation of capillary sequencing traces across the entire DNA sequences, and the assignment of qualitative (non-probabilistic) statements about the uncertainty of each base call.
 
-To characterize `r rm_number`, we relied primarily on a variety of less mature “Next Generation Sequencing” (NGS) technologies. Unlike capillary sequencing, NGS technologies can sequence a whole genome at a reasonable cost.  NGS technologies measure many reads at each position, from which variant callers and consensus base callers calculate probabilistic estimates of uncertainty based on Bayesian statistics and assuming binomial sampling.  Unfortunately, these probabilistic estimates of uncertainty are rarely accurate due to various sources of bias and error in the sequencing and bioinformatics (Fig. 1).  Therefore, to develop a characterized reference genome sequence we first generated an assembly of the whole genome then performed a base level analysis of the genome assembly.  
+To characterize `r rm_number`, we relied on a variety of less mature “Next Generation Sequencing” (NGS) technologies. Unlike capillary sequencing, NGS technologies can sequence a whole genome at a reasonable cost.  NGS technologies measure many reads at each position, from which variant callers and consensus base callers calculate probabilistic estimates of uncertainty based on Bayesian statistics and assuming binomial sampling.  Unfortunately, these probabilistic estimates of uncertainty are rarely accurate due to various sources of bias and error in the sequencing and bioinformatics (Fig. 1).  Therefore, to develop a characterized reference genome sequence we first generated a _de-novo_ assembly of the genome then performed a base level analysis of the genome assembly.  
 
 The sources of bias and error associated with different steps in the sequence measurement process are indicated in the cause-effect diagram below (Fig. 2). Please see Olson (et al. _in prep_) for a detailed discussion of these sources of error.
 
@@ -70,35 +67,38 @@ grid.raster(readPNG("MicroRMCauseEffect.png"))
 
 In addition to the sources of error and bias associated with the measurement there is an unknown degree of biological variability within the batch.  The genomic DNA was homogeneized prior to aliquoting into the individual vials but the biologically variability within the population of cells from which the DNA was extracted is unknown.  The mutations that make up this variability include single nucleotide polymorphisms (SNPs), insertions and deletions (indels), as well as structural variants.  Low frequency SNPs and indels can be mistaken as sequencing errors and low frequency structural variants can lead to ambiguities in the genome assembly.  Our characterization methods did not attempt to identify low frequency biologically variability within the RM batch, however, when interpreting the reference material characterization procedure results the potential for these low frequency mutations should be considered.
     
-Genomic purity, genome annotation, homopolymer length, and identification of repeat regions are provided as information values and have not been evaluated for sources of bias an error.  The genomic purity of the reference material was assessed using a taxonomic sequence classification algorithm, the accuracy of the method was evaluated using simulated sequence data (Olson et al. _in prep_).  However, sources of bias associated with the measurement, namely accuracy of the database used for taxonomic assignment and the assignment algorithm have not been investigated. Genome annotation is a major field of study within the biological scientific community and represents an unsolved problem in genomics, for well characterized strains such as `r rm_strain` the annotation has been highly curated, however the accuracy of the annotation is unknown. The accuracy of the homopolymer length and repeat region information is dependent on the reference genome sequence and therefore share the same sources of error and bias as the methods used to determine the reference genome sequence.
+Genomic purity is provided as an information value and has not been evaluated for sources of bias and error.  The genomic purity of the reference material was assessed using a taxonomic sequence classification algorithm, the accuracy of the method was evaluated using simulated sequence data (Olson et al. _in prep_).  However, sources of bias associated with the measurement, namely accuracy of the database and assignment algorithm, have not been investigated.
 
 \pagebreak
 
 # Characterization Process
 ## Sequence Characterization
 ### Sequencing Measurements
+Eight vials from the `r rm_number` lot were randomly selected as representatives of the lot for sequencing at NIST. In addition to NIST measurements, the material was sequenced using the Pacific Biosciences [^pacbio] RSII, and optical mapping was by OpGen through their MapIt service. 
 
 ```{r echo = FALSE,child='rm_specific_nist_sequencing.Rmd' }
 ## Add text specific to rm regarding sequencing measurements made at NIST.
 ```
-    
-Eight vials from the `r rm_number` lot were randomly selected. In addition to NIST measurements, the material was sequenced using the Pacific Biosciences [^pacbio] RSII, and optical mapping was by OpGen through their MapIt service.  
 
 ### Sequence Analysis Methods
 For the genome assembly we started with a _de novo_ genome assembly and validated the assembly using optical mapping and sequencing data generated using orthogonal measurement methods. Long read sequence data generated with the Pacific Biosciences [^pacbio] RSII generate sequence reads with a median length of around 8kb, which is long enough to spand the ribosomal operon repeat regions, often resulting in a complete genome assembly [@Koren2013]. While the long reads allow for the assembly of a complete genome the relatively high error rate ~11\%[^pb-error] (primarily insertions and deletions) for individual reads can lead to small variant errors. 
 
-To validate the assembly orthogonal methods optical mapping and short read sequencing were used.  Optical mapping provides information regarding the overall structure of the genome based on the location of restriction sites within long fragments (average size > 200Mb).  Comparison of the fragment patterns between the optical mapping data and _in-silico_ generated fragment patterns from the genome assembly indicates potential misassemblies in the genome assembly [@Mendelowitz2014]. The Optical mapping data was generated by a commercial vendor OpGen[^opgen] and sources of bias and error have not been fully investigated. The due to the resolution limit of the optical mapping method it is unable to detect misassemblies smaller than 3 kb.  
+The assembly was validated using orthogonal methods; optical mapping and short read sequencing.  Optical mapping provides information regarding the overall structure of the genome based on the location of restriction sites within long fragments (average size > 200Mb)(Fig. OpMap).  Comparison of the fragment patterns between the optical mapping data and _in-silico_ generated fragment patterns from the genome assembly indicates potential misassemblies in the genome assembly [@Mendelowitz2014]. The Optical mapping data was generated by a commercial vendor OpGen[^opgen] and sources of bias and error have not been fully investigated. The due to the resolution limit of the optical mapping method it is unable to detect misassemblies smaller than 3 kb.  
+
+```{r echo = FALSE, fig.align='center', fig.show = 'asis', fig.cap= "Optical mapping measurement process. 'Optical mapping' by Fong Chun Chan and Kendric Wang http://commons.wikimedia.org/wiki/File:Optical_mapping.jpg#/media/File:Optical_mapping.jpg"}
+grid.raster(readJPEG("Optical_mapping.jpg"))
+```
 
 Potential misassemblies smaller than 3 kb were identified using short read data generated using orthogonal sequencing technologies Illumina[^illumina] MiSeq, and Ion Torrent[^iontorrent] PGM and Pilon [@Walker2014], software developed to identify and correct misassemblies in microbial genomes.  The sources of bias associated with each of the orthogonal methods were not fully investigated and agreement between the methods supports the hypothesis that the assembly is correct. 
 
-Disagreements between the genome assembly and the optical mapping or short read results were investigated for sources of bias to account for the discrepancy. When appropriate the genome assembly was corrected.  If we were unable to identify the source of the bias that caused the misassembly the genome sequence is annotated appropriately to indicate region where the assembly is ambiguous. It is important to note that agreement between orthogonal methods does not guarantee a correct result as they may all be susceptible to the same source(s) of bias. Particularly, we identify repetitive regions where multiple assembly methods may be most prone to errors. We intend to update the genome assembly as new data is collected and errors in the assembly are revealed.
+Disagreements between the genome assembly and the optical mapping or short read results were investigated for sources of bias to account for the discrepancy. When appropriate the genome assembly was corrected.  If we were unable to identify the source of the bias that caused the misassembly the genome sequence is annotated appropriately to indicate region where the assembly is ambiguous. It is important to note that agreement between orthogonal methods does not guarantee a correct result as they may all be susceptible to the same source(s) of bias. We intend to update the genome assembly as new data is collected and errors in the assembly are revealed.
     
-Base level analysis was performed by evaluating the proportion of sequencing reads with bases supporting the genome assembly base call at individual genome positions, within the the lot (base purity) and among individual vials (base homogeneity). Short read sequencing data generated using the MiSeq and PGM were used for base level analysis. Base purity was defined for the two platform individually, using samtools mpileup [@Li2009]. Base homogeneity, was assessed using varscan somatic variant caller [@Koboldt2009], using the methods described in RM8398 report of analysis. Additional genome annotation information was obtained to provide context for base level sequence analysis include gene annotation, identification of repeat regions, and homopolymer length. Genome annotation was performed using the RAST server[^rast]. Repeat regions were identified using mumer [@Delcher2002].  
+Base level analysis was performed by evaluating the proportion of sequencing reads with bases supporting the genome assembly base call at individual genome positions, within the the lot (base purity) and among individual vials (base homogeneity). Short read sequencing data generated using the MiSeq and PGM were used for base level analysis. Base purity was defined for the two platform individually, using samtools mpileup [@Li2009]. Base homogeneity, was assessed using varscan somatic variant caller [@Koboldt2009], using the methods described in RM8398 report of analysis. 
 
 The purity of the reference material in terms of presence of DNA from sources other than `r rm_strain` was assessed using the metagenomic taxonomic read classification algorithm PathoScope [@Hong2014].  This method uses an expectation maximization algorithm where the sequence data are first mapped to a database comprised on all sequence data in the Genbank nt database, then through an iterative process re-assigns ambiguously mapped reads to based on the proportion of reads mapped unambigously to individual taxa in the database. 
 
 #### Method Reproducibility
-The methods used to characterize the reference material were developed in a manner to facilitate reuse and ensure computational reproducibility, obtaining the same results when starting with the same set of measurement data.  To achive this goal the data, computer code, as well as the computing environment were all made publically available.  The raw sequence data is archived at the Genbank Sequence Read Archive ([ncbi.nlm.nih.gov/sra](http://www.ncbi.nlm.nih.gov/sra)), see table 1 in the summary of sequencing data results section for accession numbers.  The code used to characterize the material is available through GitHub as a python bioinformatic program ([github pepr](http://www.github/nate-d-olson/pepr)) and an R package ([github peprr](http://www.github/nate-d-olson/peprr)).  The python bioinformatics pipeline performs the initial sequence analysis and uses a Docker environment for dependencies [docker.org](http://www.docker.com). A flowchat of the bioinformatic pipeline used to characterize the RM can be found in Appendix [Section D][]. The R package, includes functions for loading the output from the bioinformatics pipeline into an sqlite database and generating the summary figures and tables found within this report of analysis.  
+The methods used to characterize the reference material were developed in a manner to facilitate reuse and ensure computational reproducibility, obtaining the same results when starting with the same set of measurement data.  To achive this goal the data, computer code, as well as the computing environment are all publically available.  The raw sequence data is archived at the Genbank Sequence Read Archive, ([www.ncbi.nlm.nih.gov/sra](http://www.ncbi.nlm.nih.gov/sra)), see table 1 in the summary of sequencing data results section for accession numbers.  The code used to characterize the material is available through GitHub as a python bioinformatics pipeline, [www.github/nate-d-olson/pepr](http://www.github/nate-d-olson/pepr), and an R package, [www.github/nate-d-olson/peprr](http://www.github/nate-d-olson/peprr).  The bioinformatics pipeline performs the initial sequence analysis and uses a Docker environment for dependencies,[www.docker.org](http://www.docker.com). A flowchart of thepipeline used to characterize the RM can be found in Appendix. The R package, includes functions for loading the output from the pipeline into an sqlite database and generating the summary figures and tables found within this report of analysis.  
 
 \pagebreak
 
@@ -179,12 +179,8 @@ kable(homogeneity_sig_table(peprDB, rename_cols = TRUE),
 ```
 
 ```{r echo = FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.show = 'asis', fig.cap= "Among sample variation in purity values."}
-homogeneity_point_line_figure(peprDB)
-```
-
-##### Genome Annotation
-```{r echo = FALSE,child='rm_specific_genome_annotation_summary.Rmd' }
-## Add text specific to rm regarding general summary of genome annotation.
+#not needed to support statements in report
+#homogeneity_point_line_figure(peprDB)
 ```
 
 #### Genomic Purity
@@ -253,11 +249,6 @@ grid.raster(readPNG("RMLabel.png"))
 ```{r echo = FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.cap= "Bioinformatic pipeline flowchart."}
 grid.raster(readPNG("bioinf-pipeline-flowchart.png"))
 ```
-
-\pagebreak
-
-## Section D
-__%%TODO%%__ Example gel analysis
 
 \pagebreak
 
